--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -2,6 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'./Santosh/cifar_optim/testresults.csv'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import os, shutil\n",
+    "path = \"./runs/finetune_2023-12-26_21-27-23\"\n",
+    "destination_root_folder = \"./Santosh/cifar_optim/\"\n",
+    "destination = \"./Santosh/cifar_optim/models/\"\n",
+    "destination1 = \"./Santosh/cifar_optim/runs_config\"\n",
+    "#iterate through each folder in the path\n",
+    "folder_num = len(os.listdir(path))\n",
+    "for idx, folder in enumerate(sorted(os.listdir(path))):\n",
+    "    if idx == folder_num - 1:\n",
+    "        break\n",
+    "\n",
+    "    #get the path of the folder\n",
+    "    folder_path = os.path.join(path, folder)\n",
+    "    if not os.path.exists(os.path.join(destination)):\n",
+    "        os.makedirs(os.path.join(destination))\n",
+    "    \n",
+    "    if not os.path.exists(os.path.join(destination1, f\"{idx}\")):\n",
+    "        os.makedirs(os.path.join(destination1, f\"{idx}\"))\n",
+    "    # print(folder_path)\n",
+    "    # #copy file idx.pt to destination folder\n",
+    "    shutil.copy(os.path.join(folder_path, f\"best_checkpoint.pth\"), os.path.join(destination, f\"{idx}.pth\"))\n",
+    "    shutil.copy(os.path.join(folder_path, f\"LossAccuracy.png\"), os.path.join(destination1, f\"{idx}\", f\"LossAccuracy.png\"))\n",
+    "    shutil.copy(os.path.join(folder_path, f\"train_summary.json\"), os.path.join(destination1, f\"{idx}\", f\"train_summary.json\"))\n",
+    "\n",
+    "shutil.copy(os.path.join(path, f\"testresults.csv\"), os.path.join(destination_root_folder, f\"testresults.csv\"))\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
@@ -2854,40 +2899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NotADirectoryError",
-     "evalue": "[Errno 20] Not a directory: './runs/finetune_2023-12-15_17-00-29/testresults.csv/best_model.pt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotADirectoryError\u001b[0m                        Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m folder_path \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(path, folder)\n\u001b[1;32m      8\u001b[0m \u001b[39m# print(folder_path)\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[39m# #copy file idx.pt to destination folder\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m shutil\u001b[39m.\u001b[39;49mcopy(os\u001b[39m.\u001b[39;49mpath\u001b[39m.\u001b[39;49mjoin(folder_path, \u001b[39mf\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mbest_model.pt\u001b[39;49m\u001b[39m\"\u001b[39;49m), os\u001b[39m.\u001b[39;49mpath\u001b[39m.\u001b[39;49mjoin(destination, \u001b[39mf\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m{\u001b[39;49;00midx\u001b[39m}\u001b[39;49;00m\u001b[39m.pt\u001b[39;49m\u001b[39m\"\u001b[39;49m))\n",
-      "File \u001b[0;32m~/.conda/envs/CV701_env/lib/python3.8/shutil.py:418\u001b[0m, in \u001b[0;36mcopy\u001b[0;34m(src, dst, follow_symlinks)\u001b[0m\n\u001b[1;32m    416\u001b[0m \u001b[39mif\u001b[39;00m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39misdir(dst):\n\u001b[1;32m    417\u001b[0m     dst \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(dst, os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mbasename(src))\n\u001b[0;32m--> 418\u001b[0m copyfile(src, dst, follow_symlinks\u001b[39m=\u001b[39;49mfollow_symlinks)\n\u001b[1;32m    419\u001b[0m copymode(src, dst, follow_symlinks\u001b[39m=\u001b[39mfollow_symlinks)\n\u001b[1;32m    420\u001b[0m \u001b[39mreturn\u001b[39;00m dst\n",
-      "File \u001b[0;32m~/.conda/envs/CV701_env/lib/python3.8/shutil.py:264\u001b[0m, in \u001b[0;36mcopyfile\u001b[0;34m(src, dst, follow_symlinks)\u001b[0m\n\u001b[1;32m    262\u001b[0m     os\u001b[39m.\u001b[39msymlink(os\u001b[39m.\u001b[39mreadlink(src), dst)\n\u001b[1;32m    263\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 264\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(src, \u001b[39m'\u001b[39;49m\u001b[39mrb\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39mas\u001b[39;00m fsrc, \u001b[39mopen\u001b[39m(dst, \u001b[39m'\u001b[39m\u001b[39mwb\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m fdst:\n\u001b[1;32m    265\u001b[0m         \u001b[39m# macOS\u001b[39;00m\n\u001b[1;32m    266\u001b[0m         \u001b[39mif\u001b[39;00m _HAS_FCOPYFILE:\n\u001b[1;32m    267\u001b[0m             \u001b[39mtry\u001b[39;00m:\n",
-      "\u001b[0;31mNotADirectoryError\u001b[0m: [Errno 20] Not a directory: './runs/finetune_2023-12-15_17-00-29/testresults.csv/best_model.pt'"
-     ]
-    }
-   ],
-   "source": [
-    "import os, shutil\n",
-    "path = \"./runs/finetune_2023-12-15_17-00-29\"\n",
-    "destination = \"/l/users/nuren.zhaksylyk/new_cifar/models/\"\n",
-    "#iterate through each folder in the path\n",
-    "for idx, folder in enumerate(sorted(os.listdir(path))):\n",
-    "    #get the path of the folder\n",
-    "    folder_path = os.path.join(path, folder)\n",
-    "    # print(folder_path)\n",
-    "    # #copy file idx.pt to destination folder\n",
-    "    shutil.copy(os.path.join(folder_path, f\"best_model.pt\"), os.path.join(destination, f\"{idx}.pt\"))\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2906,8 +2918,8 @@
    ],
    "source": [
     "import os, shutil\n",
-    "path = \"./runs/finetune_2023-12-15_17-00-29\"\n",
-    "destination = \"/l/users/nuren.zhaksylyk/new_cifar/runs_config\"\n",
+    "path = \"./runs/finetune_2023-12-26_21-27-23\"\n",
+    "destination = \"/l/users/nuren.zhaksylyk/cifar_optim/runs_config\"\n",
     "#iterate through each folder in the path\n",
     "for idx, folder in enumerate(sorted(os.listdir(path))):\n",
     "\n",
@@ -3073,7 +3085,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
