--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -2,25 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'./Santosh/cifar_optim/testresults.csv'"
+       "'./Santosh/rsna_optim/testresults.csv'"
       ]
      },
+     "execution_count": 1,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import os, shutil\n",
-    "path = \"./runs/finetune_2023-12-26_21-27-23\"\n",
-    "destination_root_folder = \"./Santosh/cifar_optim/\"\n",
-    "destination = \"./Santosh/cifar_optim/models/\"\n",
-    "destination1 = \"./Santosh/cifar_optim/runs_config\"\n",
+    "path = \"./runs/finetune_2023-12-27_13-46-43\"\n",
+    "destination_root_folder = \"./Santosh/rsna_optim/\"\n",
+    "destination = \"./Santosh/rsna_optim/models/\"\n",
+    "destination1 = \"./Santosh/rsna_optim/runs_config\"\n",
     "#iterate through each folder in the path\n",
     "folder_num = len(os.listdir(path))\n",
     "for idx, folder in enumerate(sorted(os.listdir(path))):\n",
