--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -2,6 +2,94 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model</th>\n",
+       "      <th>epoch</th>\n",
+       "      <th>loss</th>\n",
+       "      <th>acc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>resnet</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>resnet</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>resnet</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    model  epoch  loss  acc\n",
+       "0  resnet      1   0.1  0.2\n",
+       "1  resnet      2   0.2  0.3\n",
+       "2  resnet      3   0.3  0.4"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "a = {'model':\"resnet\", 'epoch': 1, 'loss': 0.1, 'acc': 0.2}\n",
+    "b = {'model':\"resnet\", 'epoch': 2, 'loss': 0.2, 'acc': 0.3}\n",
+    "\n",
+    "df = pd.DataFrame([a, b])\n",
+    "\n",
+    "df.iloc[0]\n",
+    "\n",
+    "df1 = pd.DataFrame(columns=['model', 'epoch', 'loss', 'acc'])\n",
+    "df1.loc[0] = a\n",
+    "df1.loc[1] = b\n",
+    "df1.loc[2] = {'model':\"resnet\", 'epoch': 3, 'loss': 0.3, 'acc': 0.4}\n",
+    "\n",
+    "df1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
