--- a/notebooks/APTOS_EDA.ipynb
+++ b/notebooks/APTOS_EDA.ipynb
@@ -91,6 +91,252 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Counts:\n",
+      "0    52274\n",
+      "1     4964\n",
+      "2    10522\n",
+      "3     1670\n",
+      "4     1531\n",
+      "Name: class, dtype: int64\n",
+      "\n",
+      "Val Counts:\n",
+      "0    6534\n",
+      "1     620\n",
+      "2    1315\n",
+      "3     209\n",
+      "4     192\n",
+      "Name: class, dtype: int64\n",
+      "\n",
+      "Test Counts:\n",
+      "0    6535\n",
+      "1     621\n",
+      "2    1316\n",
+      "3     208\n",
+      "4     191\n",
+      "Name: class, dtype: int64\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from collections import defaultdict\n",
+    "import shutil\n",
+    "\n",
+    "\n",
+    "data_dir = '../dataset/224_data/DR/eyepacs/'\n",
+    "folders = ['0', '1', '2', '3', '4']\n",
+    "\n",
+    "file_paths = []\n",
+    "labels = []\n",
+    "\n",
+    "for folder in folders:\n",
+    "    folder_path = os.path.join(data_dir, folder)\n",
+    "    files = os.listdir(folder_path)\n",
+    "    file_paths.extend([os.path.join(folder_path, file) for file in files])\n",
+    "    labels.extend([folder] * len(files))\n",
+    "\n",
+    "\n",
+    "train_files, remaining_files, train_labels, remaining_labels = train_test_split(\n",
+    "    file_paths, labels, test_size=0.2, stratify=labels, random_state=9)\n",
+    "\n",
+    "val_files, test_files, val_labels, test_labels = train_test_split(\n",
+    "    remaining_files, remaining_labels, test_size=0.5, stratify=remaining_labels, random_state=9)\n",
+    "\n",
+    "all_files = train_files + val_files + test_files\n",
+    "all_labels = train_labels + val_labels + test_labels\n",
+    "all_splits = ['train'] * len(train_files) + ['val'] * len(val_files) + ['test'] * len(test_files)\n",
+    "\n",
+    "data = {'filename': [file[1:] for file in all_files],\n",
+    "        'class': all_labels,\n",
+    "        'split': all_splits}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "csv_filename = '../dataset/224_data/DR/eyepacs/eyepacs_dataset_splits.csv'\n",
+    "df.to_csv(csv_filename, index=False)\n",
+    "\n",
+    "for split_name in ['train', 'val', 'test']:\n",
+    "    split_data = df[df['split'] == split_name]\n",
+    "    class_counts = split_data['class'].value_counts().sort_index()\n",
+    "    print(f\"{split_name.capitalize()} Counts:\")\n",
+    "    print(class_counts)\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Counts:\n",
+      "0    437\n",
+      "1    122\n",
+      "2    198\n",
+      "3    203\n",
+      "Name: class, dtype: int64\n",
+      "\n",
+      "Val Counts:\n",
+      "0    54\n",
+      "1    16\n",
+      "2    25\n",
+      "3    25\n",
+      "Name: class, dtype: int64\n",
+      "\n",
+      "Test Counts:\n",
+      "0    55\n",
+      "1    15\n",
+      "2    24\n",
+      "3    26\n",
+      "Name: class, dtype: int64\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from collections import defaultdict\n",
+    "import shutil\n",
+    "\n",
+    "\n",
+    "data_dir = '../dataset/224_data/DR/messidor/'\n",
+    "folders = ['0', '1', '2', '3']\n",
+    "\n",
+    "file_paths = []\n",
+    "labels = []\n",
+    "\n",
+    "for folder in folders:\n",
+    "    folder_path = os.path.join(data_dir, folder)\n",
+    "    files = os.listdir(folder_path)\n",
+    "    file_paths.extend([os.path.join(folder_path, file) for file in files])\n",
+    "    labels.extend([folder] * len(files))\n",
+    "\n",
+    "\n",
+    "train_files, remaining_files, train_labels, remaining_labels = train_test_split(\n",
+    "    file_paths, labels, test_size=0.2, stratify=labels, random_state=9)\n",
+    "\n",
+    "val_files, test_files, val_labels, test_labels = train_test_split(\n",
+    "    remaining_files, remaining_labels, test_size=0.5, stratify=remaining_labels, random_state=9)\n",
+    "\n",
+    "all_files = train_files + val_files + test_files\n",
+    "all_labels = train_labels + val_labels + test_labels\n",
+    "all_splits = ['train'] * len(train_files) + ['val'] * len(val_files) + ['test'] * len(test_files)\n",
+    "\n",
+    "data = {'filename': [file[1:] for file in all_files],\n",
+    "        'class': all_labels,\n",
+    "        'split': all_splits}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "csv_filename = '../dataset/224_data/DR/messidor/messidor_dataset_splits.csv'\n",
+    "df.to_csv(csv_filename, index=False)\n",
+    "\n",
+    "for split_name in ['train', 'val', 'test']:\n",
+    "    split_data = df[df['split'] == split_name]\n",
+    "    class_counts = split_data['class'].value_counts().sort_index()\n",
+    "    print(f\"{split_name.capitalize()} Counts:\")\n",
+    "    print(class_counts)\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Counts:\n",
+      "0    813\n",
+      "1    216\n",
+      "2    278\n",
+      "3     60\n",
+      "4     28\n",
+      "Name: class, dtype: int64\n",
+      "\n",
+      "Val Counts:\n",
+      "0    102\n",
+      "1     27\n",
+      "2     34\n",
+      "3      7\n",
+      "4      4\n",
+      "Name: class, dtype: int64\n",
+      "\n",
+      "Test Counts:\n",
+      "0    102\n",
+      "1     27\n",
+      "2     35\n",
+      "3      8\n",
+      "4      3\n",
+      "Name: class, dtype: int64\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from collections import defaultdict\n",
+    "import shutil\n",
+    "\n",
+    "\n",
+    "data_dir = '../dataset/224_data/DR/messidor_2/'\n",
+    "folders = ['0', '1', '2', '3', '4']\n",
+    "\n",
+    "file_paths = []\n",
+    "labels = []\n",
+    "\n",
+    "for folder in folders:\n",
+    "    folder_path = os.path.join(data_dir, folder)\n",
+    "    files = os.listdir(folder_path)\n",
+    "    file_paths.extend([os.path.join(folder_path, file) for file in files])\n",
+    "    labels.extend([folder] * len(files))\n",
+    "\n",
+    "\n",
+    "train_files, remaining_files, train_labels, remaining_labels = train_test_split(\n",
+    "    file_paths, labels, test_size=0.2, stratify=labels, random_state=9)\n",
+    "\n",
+    "val_files, test_files, val_labels, test_labels = train_test_split(\n",
+    "    remaining_files, remaining_labels, test_size=0.5, stratify=remaining_labels, random_state=9)\n",
+    "\n",
+    "all_files = train_files + val_files + test_files\n",
+    "all_labels = train_labels + val_labels + test_labels\n",
+    "all_splits = ['train'] * len(train_files) + ['val'] * len(val_files) + ['test'] * len(test_files)\n",
+    "\n",
+    "data = {'filename': [file[1:] for file in all_files],\n",
+    "        'class': all_labels,\n",
+    "        'split': all_splits}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "csv_filename = '../dataset/224_data/DR/messidor_2/messidor_2_dataset_splits.csv'\n",
+    "df.to_csv(csv_filename, index=False)\n",
+    "\n",
+    "for split_name in ['train', 'val', 'test']:\n",
+    "    split_data = df[df['split'] == split_name]\n",
+    "    class_counts = split_data['class'].value_counts().sort_index()\n",
+    "    print(f\"{split_name.capitalize()} Counts:\")\n",
+    "    print(class_counts)\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
