--- a/notebooks/APTOS_EDA.ipynb
+++ b/notebooks/APTOS_EDA.ipynb
@@ -340,6 +340,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load the CSV file\n",
+    "file_path = \"/share/nvmedata/santosh/CheXpert-v1.0_224/csv/test_labels.csv\"  # Replace with the actual file path\n",
+    "df = pd.read_csv(file_path)\n",
+    "\n",
+    "# Create the \"Frontal/Lateral\" column\n",
+    "df[\"Frontal/Lateral\"] = df[\"Path\"].apply(lambda x: \"Frontal\" if \"frontal\" in x else \"Lateral\")\n",
+    "\n",
+    "# Save the updated dataframe to a new CSV file\n",
+    "output_file_path = \"/share/nvmedata/santosh/CheXpert-v1.0_224/csv/test_labels_v2.csv\"  # Replace with the desired output file path\n",
+    "df.to_csv(output_file_path, index=False)\n",
+    "\n",
+    "# Print the updated dataframe\n",
+    "print(df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
