--- a/notebooks/souping_cifar_clip_original.ipynb
+++ b/notebooks/souping_cifar_clip_original.ipynb
@@ -19,17 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/santosh.sanjeev/.conda/envs/nunoodles/lib/python3.8/site-packages/torchvision/datapoints/__init__.py:12: UserWarning: The torchvision.datapoints and torchvision.transforms.v2 namespaces are still Beta. While we do not expect major breaking changes, some APIs may still change according to user feedback. Please submit any feedback you may have in this issue: https://github.com/pytorch/vision/issues/6753, and you can also check out https://github.com/pytorch/vision/issues/7319 to learn more about the APIs that we suspect might involve future changes. You can silence this warning by calling torchvision.disable_beta_transforms_warning().\n",
-      "  warnings.warn(_BETA_TRANSFORMS_WARNING)\n",
-      "/home/santosh.sanjeev/.conda/envs/nunoodles/lib/python3.8/site-packages/torchvision/transforms/v2/__init__.py:54: UserWarning: The torchvision.datapoints and torchvision.transforms.v2 namespaces are still Beta. While we do not expect major breaking changes, some APIs may still change according to user feedback. Please submit any feedback you may have in this issue: https://github.com/pytorch/vision/issues/6753, and you can also check out https://github.com/pytorch/vision/issues/7319 to learn more about the APIs that we suspect might involve future changes. You can silence this warning by calling torchvision.disable_beta_transforms_warning().\n",
-      "  warnings.warn(_BETA_TRANSFORMS_WARNING)\n",
       "/home/santosh.sanjeev/.conda/envs/nunoodles/lib/python3.8/site-packages/torchvision/transforms/v2/_deprecated.py:41: UserWarning: The transform `ToTensor()` is deprecated and will be removed in a future release. Instead, please use `transforms.Compose([transforms.ToImageTensor(), transforms.ConvertImageDtype()])`.\n",
       "  warnings.warn(\n"
      ]
@@ -80,12 +76,11 @@
     "#     ])\n",
     "\n",
     "# transforms = _transform(224)\n",
-    "CIFAR_PATH = \"./dataset/cifar\"\n",
-    "CIFAR_INDICES = \"./dataset/cifar/cifar1098_idxs.npy\"\n",
+    "CIFAR_PATH = \"../dataset/cifar\"\n",
+    "CIFAR_INDICES = \"../dataset/cifar/cifar1098_idxs.npy\"\n",
     "\n",
     "train_transform = v2.Compose([\n",
-    "    v2.RandomRotation(degrees=(-70, 70)),\n",
-    "    v2.RandomResizedCrop((224, 224), scale=(0.7, 1.2), antialias=True, interpolation = InterpolationMode.BILINEAR),\n",
+    "    v2.RandomResizedCrop((224, 224), scale=(0.9, 1.0), antialias=True),\n",
     "    v2.ToTensor(),\n",
     "    v2.Normalize(mean=[0.485,0.456,0.406],std=[0.229,0.224,0.225]),\n",
     "])\n",
@@ -122,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
